--- a/BookStore.API/BookStore.API.csproj
+++ b/BookStore.API/BookStore.API.csproj
@@ -43,6 +43,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.3\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
@@ -112,6 +118,10 @@
     <ProjectReference Include="..\BookStore.Models\BookStore.Models.csproj">
       <Project>{f10e004f-cc11-4232-b89b-4546953a99c9}</Project>
       <Name>BookStore.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BookStore.Service\BookStore.Service.csproj">
+      <Project>{2A45CFF7-B087-47E1-BFB8-88E464A2733F}</Project>
+      <Name>BookStore.Service</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
